testsuite/codegen/compile-fail/main-method-has-generics.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class Main {
  // CHECK-L: main-method-has-generics.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main[X]() { }
}
